# -kuairand-cross-domain-ranking

./: .editorconfig  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
configs/: din_baseline_mem16gb.yaml  train_din_mem16gb.yaml  train_din_psrg_pcrg_mem16gb.yaml  train_din_psrg_pcrg_transformer.yaml  train_din_psrg_pcrg_transformer_mbcnet.yaml  train_din_psrg_pcrg_transformer_mbcnet_ppnet.yaml
kuairand/: __init__.py
kuairand/eda/: __init__.py  data_scan.py  feature_eda.py  join_eda.py  log_eda.py  notebook_builder.py  profiling.py  reporting.py  utils.py
notebooks/: 01_eda.ipynb
preprocess/: README.md  feature_config.yaml  run_all_v2.py  step1_build_vocabs_v2.py  step2_compute_stats.py  step3_generate_samples_v2.py  step4_split_and_save_v2.py
reports/: full_project_report.md  pipeline_detailed_operations.md
reports/eda_report/: report.md
reports/interview/: build.ps1  build.sh  interview_deck.qmd
reports/interview/assets/: latex-header.tex  (+2 more)
scripts/: bench_train_throughput.py  run_ads_ablation.py  run_eda.py  run_with_features.sh  smoke_test_din.py
src/: main_train_din.py
src/analysis/: __init__.py  summarize_experiments.py  tab_click_stats.py
src/datasets/: __init__.py  collate.py  parquet_iterable_dataset.py
src/metrics/: __init__.py  metrics.py
src/models/: __init__.py  din.py
src/tests/: __init__.py  test_mbcnet_shapes.py  test_ppnet_shapes.py  test_transformer_fusion_shapes.py
src/trainers/: __init__.py  train_din.py
src/utils/: __init__.py  checkpoint.py  seed.py
tests/: test_din_psrg_pcrg_shapes.py
(+10 files in other folders)
